--- a/LCI.IDP/Views/_ViewImports.cshtml
+++ b/LCI.IDP/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
-﻿@using IdentityServerHost.Quickstart.UI
+﻿@using LCI.IDP
+@using LCI.IDP.UserRegistration
+@using IdentityServerHost.Quickstart.UI
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
