Add send a password reset request

--- a/LCI.IDP/Views/_ViewImports.cshtml
+++ b/LCI.IDP/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using LCI.IDP
 @using LCI.IDP.UserRegistration
+@using LCI.IDP.PasswordReset
 @using IdentityServerHost.Quickstart.UI
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
