--- a/LCI.IDP/Views/Account/Login.cshtml
+++ b/LCI.IDP/Views/Account/Login.cshtml
@@ -41,6 +41,14 @@
                                     </div>
                                 </div>
                             }
+                            
+                            <div class="form-group">
+                                <a asp-action="RequestPassword"
+                                    asp-controller="PasswordReset"
+                                    asp-route-returnUrl="@Model.ReturnUrl">
+                                    Forgot your password? Click here.
+                                </a>
+                            </div>
 
                             <div class="form-group">
                                 <a asp-action="RegisterUser"
