--- a/LCI.IDP/Views/_ViewImports.cshtml
+++ b/LCI.IDP/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using LCI.IDP
 @using LCI.IDP.UserRegistration
 @using LCI.IDP.PasswordReset
+@using LCI.IDP.Account
 @using IdentityServerHost.Quickstart.UI
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
