--- a/LCI.IDP/Views/Shared/_Nav.cshtml
+++ b/LCI.IDP/Views/Shared/_Nav.cshtml
@@ -19,6 +19,11 @@
         @if (!string.IsNullOrWhiteSpace(name))
         {
             <ul class="navbar-nav mr-auto">
+                @if (User.IsAuthenticated())
+                {
+                    <li><a asp-action="RegisterForMfa"
+                    asp-controller="MfaRegistration">Register For MFA</a></li>
+                }
                 <li class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">@name <b class="caret"></b></a>
                     
