--- a/LCI.IDP/Views/_ViewImports.cshtml
+++ b/LCI.IDP/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using LCI.IDP.UserRegistration
 @using LCI.IDP.PasswordReset
 @using LCI.IDP.Account
+@using LCI.IDP.MfaRegistration
 @using IdentityServerHost.Quickstart.UI
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
